--- a/plugin-px-hub/resources.qrc
+++ b/plugin-px-hub/resources.qrc
@@ -2,5 +2,10 @@
     <qresource prefix="/">
         <file>resources/font-solid.svg</file>
         <file>resources/times-solid.svg</file>
+        <file>resources/icon/online.svg</file>
+        <file>resources/icon/offline.svg</file>
+        <file>resources/icon/none.svg</file>
+        <file>resources/icon/mail.svg</file>
+        <file>resources/icon/user.svg</file>
     </qresource>
 </RCC>
