--- a/plugin-px-hub/resources.qrc
+++ b/plugin-px-hub/resources.qrc
@@ -7,5 +7,8 @@
         <file>resources/icon/none.svg</file>
         <file>resources/icon/mail.svg</file>
         <file>resources/icon/user.svg</file>
+        <file>resources/icon/status_0_green_o.svg</file>
+        <file>resources/icon/status_0_grey.svg</file>
+        <file>resources/icon/status_0_red.svg</file>
     </qresource>
 </RCC>
